// SPDX-License-Identifier: MIT
package com.daimler.sechub.adapter.checkmarx;

import com.daimler.sechub.adapter.Adapter;

public interface CheckmarxAdapter extends Adapter<CheckmarxAdapterConfig> {

}