// SPDX-License-Identifier: MIT
package com.mercedesbenz.sechub.wrapper.checkmarx;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class CheckmarxWrapperApplication {

    public static void main(String[] args) {
        SpringApplication.run(CheckmarxWrapperApplication.class, args);
    }
}
